--- a/src/index.css
+++ b/src/index.css
@@ -69,8 +69,8 @@ video {
   pointer-events: none;
 }
 
-.video-container:hover .video-controls-container,
-.video-container:focus-within .video-controls-container,
+.video-container.hover:hover .video-controls-container,
+.video-container.hover:focus-within .video-controls-container,
 .video-container.paused .video-controls-container {
   opacity: 1;
 }
@@ -98,7 +98,7 @@ video {
 }
 
 .video-controls-container .controls button.wide-btn {
-  width: 50px;
+  width: 3rem;
 }
 
 .video-controls-container .controls button:focus {
